# evil-santa-backend

./: .env-example  .gitignore  Cargo.toml  Makefile
.github/workflows/: release.yml
.sqlx/: query-0be05f2e1c7cdd938402533211ce48782177d387c5c6d79b1e7354cfc67cd65d.json  query-15c4e32c70f30fb8cbd84a01e9044b64c9275135aa3bbe7de9529849216fa479.json  query-33b118264b1a886546ed9e883eb5f0ccea5e2770ab993317aed0492259ae9023.json  query-461063edfdd0d852865fb335f3c6ca92cb9078292169a723fcb08b4eb00b93d8.json  query-4f4751cccca8c54b0a30a1a1a3723a5873428cc6a831cb06e352a849868063e1.json  query-67a689c05b15012118ff591761fdb301c4a67606ff6d5edf0aeb9bc5f4a0ad0a.json  query-6e46b5b127b21b0a60aba56aeb275208b4a1480f34d939d5f8c02e856666ac65.json  query-758c956ead7fe963ca00ddc00ef28e9873bd1c5cf82ba8de36c2b4245dad724d.json  query-7d681cc862820b39b09a464c17c67124591056120dd73c46d0745a2d114279a6.json  query-95ad12413fd78ed8739325fce8c152e18b2cdc58bb905c24ee89070c337b4ac2.json  query-aa7584da3d21292bffa0f22c121ff2b69b91ecfa1caf17cfd6f439a4368d60b8.json  query-b06b818f92488d4e6cce7fb2b40fdcaafbde1eccca4b85a07c4dd6e0445418aa.json  query-cdce6dae685afdff5509b9efdf03133c9b510970b4f26986f8caf98c60928ed4.json  query-f9ad0918c9167fb0d7c37194bfc413f5664e1951fa0584e96a2a4c123cf5f0cd.json
migrations/: 20231126072323_games.up.sql  20231126073323_players.up.sql  20231126073417_presents.down.sql  20231126073417_presents.up.sql  20231207190958_game_play.down.sql  20231207190958_game_play.up.sql
src/: api.rs  auth.rs  db.rs  main.rs
src/api/: games.rs  players.rs  presents.rs
src/auth/: firebase.rs  (+1 more)
(+4 files in other folders)
